# aoc25-rs

./: .env.example  .gitignore  Cargo.toml  README.md  bench.sh  build.rs  create_day.sh
.github/workflows/: test-and-bench.yml
src/: main.rs
src/day/: .example_day.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  mod.rs
src/days/: day_01.rs  day_02.rs  mod.rs
src/error/: mod.rs
src/util/: benchmark.rs  input.rs  mod.rs  number.rs
